--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Обо мне</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4039655723"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3974061259" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4045945510"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=131733537" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=280398640"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=422956376" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=109722708"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=158319576" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -48,14 +48,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext transition clip_frame grpelem shared_content" id="u115" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u115_content"><!-- svg --><img class="svg temp_no_img_src" id="u111" data-orig-src="images/logo-(2).svg?crc=315416931" width="114" height="40" alt="" data-mu-svgfallback="images/logo%20(2)_poster_.png?crc=158501887" src="images/blank.gif?crc=4208392903"/></a>
          <div class="clearfix grpelem" id="pmenuu582"><!-- column -->
           <nav class="MenuBar clearfix colelem" id="menuu582" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- horizontal box -->
+           <div class="MenuItemContainer clearfix grpelem" id="u73188"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u73189" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73190-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u73190-4_0_content">Портфолио</p></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix grpelem" id="u73231"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u73232" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73235-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u73235-4_0_content">Обо мне</p></div></a>
+           </div>
            <div class="MenuItemContainer clearfix grpelem" id="u657"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u658" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u661-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u661-4_0_content">Портфолио | Тимофей Малахов</p></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix grpelem" id="u590"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u593" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u594-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u594-4_0_content">Обо мне</p></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix grpelem" id="u24818"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u24821" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u24824-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u24824-4_0_content">Контакты</p></div></a>
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u658" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u661-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u661-4_0_content">Контакты</p></div></a>
            </div>
           </nav>
           <div class="clearfix colelem shared_content" id="u6976-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u6976-4_content"><!-- content -->
@@ -121,14 +121,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="clearfix colelem" id="pu115"><!-- group -->
           <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
           <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu582"><!-- horizontal box -->
+           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73188"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="index.html" data-orig-id="u73189"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73190-4"><!-- content --><span class="placeholder" data-placeholder-for="u73190-4_0_content"><!-- placeholder node --></span></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73231"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem temp_no_id" href="about.html" data-orig-id="u73232"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73235-4"><!-- content --><span class="placeholder" data-placeholder-for="u73235-4_0_content"><!-- placeholder node --></span></div></a>
+           </div>
            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u657"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="index.html" data-orig-id="u658"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u661-4"><!-- content --><span class="placeholder" data-placeholder-for="u661-4_0_content"><!-- placeholder node --></span></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u590"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem temp_no_id" href="about.html" data-orig-id="u593"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u594-4"><!-- content --><span class="placeholder" data-placeholder-for="u594-4_0_content"><!-- placeholder node --></span></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u24818"><!-- vertical box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u24821"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u24824-4"><!-- content --><span class="placeholder" data-placeholder-for="u24824-4_0_content"><!-- placeholder node --></span></div></a>
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u658"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u661-4"><!-- content --><span class="placeholder" data-placeholder-for="u661-4_0_content"><!-- placeholder node --></span></div></a>
            </div>
           </nav>
          </div>
