--- a/fastfood-animation-copy.html
+++ b/fastfood-animation-copy.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Космическая анимация</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=9547637"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation-copy.css?crc=448208335" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=373585176"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation-copy.css?crc=509258507" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=239425187"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation-copy.css?crc=4280073707" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=3937776811"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation-copy.css?crc=4066748595" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -65,15 +65,15 @@ transform-origin: 50% 50%;
          <div class="position_content" id="u48553_position_content">
           <div class="clearfix colelem" id="pu68318"><!-- group -->
            <a class="nonblock nontext transition clip_frame grpelem shared_content" id="u68318" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u68318_content"><!-- svg --><img class="svg temp_no_img_src" id="u68319" data-orig-src="images/logo-(2).svg?crc=315416931" width="114" height="40" alt="" data-mu-svgfallback="images/logo%20(2)_poster_.png?crc=158501887" src="images/blank.gif?crc=4208392903"/></a>
-           <nav class="MenuBar clearfix grpelem" id="menuu68325" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- horizontal box -->
-            <div class="MenuItemContainer clearfix grpelem" id="u68340"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68343" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68344-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68344-4_0_content">Портфолио | Тимофей Малахов</p></div></a>
+           <nav class="MenuBar clearfix grpelem" id="menuu73273" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- horizontal box -->
+            <div class="MenuItemContainer clearfix grpelem" id="u73274"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u73275" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73277-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u73277-4_0_content">Портфолио</p></div></a>
             </div>
-            <div class="MenuItemContainer clearfix grpelem" id="u68333"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68336" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68339-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68339-4_0_content">Обо мне</p></div></a>
+            <div class="MenuItemContainer clearfix grpelem" id="u73288"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u73289" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73291-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u73291-4_0_content">Обо мне</p></div></a>
             </div>
-            <div class="MenuItemContainer clearfix grpelem" id="u68326"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68327" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68330-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68330-4_0_content">Контакты</p></div></a>
+            <div class="MenuItemContainer clearfix grpelem" id="u73281"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u73284" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u73287-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u73287-4_0_content">Контакты</p></div></a>
             </div>
            </nav>
           </div>
@@ -188,15 +188,15 @@ transform-origin: 50% 50%;
          <div class="position_content temp_no_id" data-orig-id="u48553_position_content">
           <div class="clearfix colelem temp_no_id" data-orig-id="pu68318"><!-- group -->
            <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u68318_content"><!-- placeholder node --></span>
-           <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu68325"><!-- horizontal box -->
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u68340"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="index.html" data-orig-id="u68343"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u68344-4"><!-- content --><span class="placeholder" data-placeholder-for="u68344-4_0_content"><!-- placeholder node --></span></div></a>
+           <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu73273"><!-- horizontal box -->
+            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73274"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="index.html" data-orig-id="u73275"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73277-4"><!-- content --><span class="placeholder" data-placeholder-for="u73277-4_0_content"><!-- placeholder node --></span></div></a>
             </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u68333"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="about.html" data-orig-id="u68336"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u68339-4"><!-- content --><span class="placeholder" data-placeholder-for="u68339-4_0_content"><!-- placeholder node --></span></div></a>
+            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73288"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="about.html" data-orig-id="u73289"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73291-4"><!-- content --><span class="placeholder" data-placeholder-for="u73291-4_0_content"><!-- placeholder node --></span></div></a>
             </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u68326"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u68327"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u68330-4"><!-- content --><span class="placeholder" data-placeholder-for="u68330-4_0_content"><!-- placeholder node --></span></div></a>
+            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73281"><!-- vertical box -->
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u73284"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73287-4"><!-- content --><span class="placeholder" data-placeholder-for="u73287-4_0_content"><!-- placeholder node --></span></div></a>
             </div>
            </nav>
           </div>
@@ -250,6 +250,17 @@ transform-origin: 50% 50%;
           </ul>
           <div class="grpelem" id="u68324" data-sizePolicy="fluidWidth" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
           <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u68318_content"><!-- placeholder node --></span>
+          <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu73273"><!-- horizontal box -->
+           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73274"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="index.html" data-orig-id="u73275"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73277-4"><!-- content --><span class="placeholder" data-placeholder-for="u73277-4_0_content"><!-- placeholder node --></span></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73288"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="about.html" data-orig-id="u73289"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73291-4"><!-- content --><span class="placeholder" data-placeholder-for="u73291-4_0_content"><!-- placeholder node --></span></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73281"><!-- vertical box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u73284"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73287-4"><!-- content --><span class="placeholder" data-placeholder-for="u73287-4_0_content"><!-- placeholder node --></span></div></a>
+           </div>
+          </nav>
          </div>
          <span class="clearfix colelem placeholder" data-placeholder-for="u48547-4_content"><!-- placeholder node --></span>
          <div class="clearfix colelem" id="u60234-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
