--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио | Тимофей Малахов</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4252963503"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3815768212" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=429617211"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4226834687" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=109722708"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=58975963" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=482130038"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=455813229" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -318,18 +318,7 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
        <div class="gradient temp_no_id" data-orig-id="u299"><!-- column -->
         <div class="clearfix temp_no_id" data-orig-id="u299_align_to_page">
          <div class="position_content" id="u299_position_content">
-          <div class="clearfix colelem" id="pmenuu582"><!-- group -->
-           <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu582"><!-- horizontal box -->
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73188"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem temp_no_id" href="index.html" data-orig-id="u73189"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73190-4"><!-- content --><span class="placeholder" data-placeholder-for="u73190-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73231"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="about.html" data-orig-id="u73232"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73235-4"><!-- content --><span class="placeholder" data-placeholder-for="u73235-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u657"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u658"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u661-4"><!-- content --><span class="placeholder" data-placeholder-for="u661-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-           </nav>
+          <div class="clearfix colelem" id="paccordionu5458"><!-- group -->
            <ul class="AccordionWidget clearfix grpelem" id="accordionu5458" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
             <li class="AccordionPanel clearfix colelem" id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u5464-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5464-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u5512" href="index.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5515-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5515-4_0_content">Портфолио | Тимофей Малахов</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u5519" href="about.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5522-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5522-4_0_content">Обо мне</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u24856" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u24857-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u24857-4_0_content">Контакты</p></div></a></div></nav></div></li>
            </ul>
@@ -396,18 +385,7 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
        <div class="gradient temp_no_id" data-orig-id="u299"><!-- column -->
         <div class="clearfix temp_no_id" data-orig-id="u299_align_to_page">
          <div class="position_content temp_no_id" data-orig-id="u299_position_content">
-          <div class="clearfix colelem temp_no_id" data-orig-id="pmenuu582"><!-- group -->
-           <nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="menuu582"><!-- horizontal box -->
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73188"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem temp_no_id" href="index.html" data-orig-id="u73189"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73190-4"><!-- content --><span class="placeholder" data-placeholder-for="u73190-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u73231"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="about.html" data-orig-id="u73232"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u73235-4"><!-- content --><span class="placeholder" data-placeholder-for="u73235-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-            <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u657"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem temp_no_id" href="contacts.html" data-orig-id="u658"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u661-4"><!-- content --><span class="placeholder" data-placeholder-for="u661-4_0_content"><!-- placeholder node --></span></div></a>
-            </div>
-           </nav>
+          <div class="clearfix colelem temp_no_id" data-orig-id="paccordionu5458"><!-- group -->
            <ul class="AccordionWidget clearfix grpelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="accordionu5458"><!-- vertical box -->
             <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5464-3"><!-- content --><span class="placeholder" data-placeholder-for="u5464-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem temp_no_id" href="index.html" data-orig-id="u5512"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5515-4"><!-- content --><span class="placeholder" data-placeholder-for="u5515-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="about.html" data-orig-id="u5519"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5522-4"><!-- content --><span class="placeholder" data-placeholder-for="u5522-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="contacts.html" data-orig-id="u24856"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u24857-4"><!-- content --><span class="placeholder" data-placeholder-for="u24857-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
            </ul>
