--- a/cosmic-animation.html
+++ b/cosmic-animation.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "fastfood-animation-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "cosmic-animation.css"], "outOfDate":[]};
 </script>
   
   <title>Космическая анимация</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=4015769125"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation-copy.css?crc=178735528" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=4086857949"/>
+  <link rel="stylesheet" type="text/css" href="css/cosmic-animation.css?crc=4076001048" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=3937776811"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation-copy.css?crc=3979293986" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=4027959307"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_cosmic-animation.css?crc=4165819971" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -137,7 +137,7 @@ transform-origin: 50% 50%;
         <div class="clearfix colelem" id="pu68555"><!-- group -->
          <a class="nonblock nontext project-pic grpelem shared_content" id="u68555" href="fastfood-animation.html" data-content-guid="u68555_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <a class="nonblock nontext project-pic grpelem shared_content" id="u68561" href="alk-lp.html" data-content-guid="u68561_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <a class="nonblock nontext MuseLinkActive project-pic grpelem shared_content" id="u68558" href="fastfood-animation-copy.html" data-content-guid="u68558_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
+         <a class="nonblock nontext MuseLinkActive project-pic grpelem shared_content" id="u68558" href="cosmic-animation.html" data-content-guid="u68558_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <div class="size_fixed grpelem shared_content" id="u69164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u69164_content"><!-- custom html -->
           
 
@@ -299,7 +299,7 @@ transform-origin: 50% 50%;
         <a class="nonblock nontext project-pic colelem temp_no_id" href="sportblend-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68556"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic clearfix colelem temp_no_id" href="fastfood-animation.html" data-orig-id="u68555"><!-- group --><span class="size_fixed grpelem placeholder" data-placeholder-for="u69164_content"><!-- placeholder node --></span></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68561"><!-- simple frame --></a>
-        <a class="nonblock nontext MuseLinkActive project-pic colelem temp_no_id" href="fastfood-animation-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68558"><!-- simple frame --></a>
+        <a class="nonblock nontext MuseLinkActive project-pic colelem temp_no_id" href="cosmic-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68558"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="webinar-st.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68554"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="book-ico.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68560"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="skyeng-lp-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68557"><!-- simple frame --></a>
