--- a/fastfood-animation.html
+++ b/fastfood-animation.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Шевелю Фастфуд | Векторный бургер</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=4015769125"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=414258034" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=4086857949"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=378122099" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=3937776811"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=3890904105" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=4027959307"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=4153586721" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -137,7 +137,7 @@ transform-origin: 50% 50%;
         <div class="clearfix colelem" id="pu68555"><!-- group -->
          <a class="nonblock nontext MuseLinkActive project-pic grpelem shared_content" id="u68555" href="fastfood-animation.html" data-content-guid="u68555_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <a class="nonblock nontext project-pic grpelem shared_content" id="u68561" href="alk-lp.html" data-content-guid="u68561_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <a class="nonblock nontext project-pic grpelem shared_content" id="u68558" href="fastfood-animation-copy.html" data-content-guid="u68558_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
+         <a class="nonblock nontext project-pic grpelem shared_content" id="u68558" href="cosmic-animation.html" data-content-guid="u68558_content"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <div class="size_fixed grpelem shared_content" id="u69164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u69164_content"><!-- custom html -->
           
 
@@ -306,7 +306,7 @@ transform-origin: 50% 50%;
         <a class="nonblock nontext project-pic colelem temp_no_id" href="sportblend-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68556"><!-- simple frame --></a>
         <a class="nonblock nontext MuseLinkActive project-pic clearfix colelem temp_no_id" href="fastfood-animation.html" data-orig-id="u68555"><!-- group --><span class="size_fixed grpelem placeholder" data-placeholder-for="u69164_content"><!-- placeholder node --></span></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68561"><!-- simple frame --></a>
-        <a class="nonblock nontext project-pic colelem temp_no_id" href="fastfood-animation-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68558"><!-- simple frame --></a>
+        <a class="nonblock nontext project-pic colelem temp_no_id" href="cosmic-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68558"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="webinar-st.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68554"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="book-ico.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68560"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic colelem temp_no_id" href="skyeng-lp-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u68557"><!-- simple frame --></a>
