--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио | Тимофей Малахов</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=429617211"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4226834687" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=506083128"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4080477592" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=482130038"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=455813229" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=154805446"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4206724882" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -152,7 +152,7 @@ transform-origin: 50% 50%;
         <div class="clearfix colelem shared_content" id="pu4432" data-content-guid="pu4432_content"><!-- group -->
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4432" href="fastfood-animation.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4424" href="alk-lp.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4411" href="fastfood-animation-copy.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
+         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4411" href="cosmic-animation.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
         </div>
         <div class="clearfix colelem shared_content" id="pu17622" data-content-guid="pu17622_content"><!-- group -->
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u17622" href="webinar-st.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
@@ -419,7 +419,7 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="sportblend-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4432"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4424"><!-- simple frame --></a>
-         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></a>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="cosmic-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="webinar-st.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="book-ico.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="skyeng-lp-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></a>
