--- a/pizza-lp.html
+++ b/pizza-lp.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u62468-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u62468-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/pizza/index.html" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/pizza/index.html" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u62455-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u62455-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u62455-4_0_content">Макет лендинга для пицерии</p>
