--- a/skyeng-lp.html
+++ b/skyeng-lp.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u23173-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u23173-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/skyeng/index.html" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/skyeng/index.html" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u23168-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u23168-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u23168-4_0_content">Лендинг пейдж для преподавателей английского</p>
