--- a/webinar-st.html
+++ b/webinar-st.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u66510-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u66510-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/webinar-st/" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/webinar-st/" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u66513-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u66513-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u66513-4_0_content">Лендинг для онлайн вебинара</p>
