--- a/sportblend-lp.html
+++ b/sportblend-lp.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u46870-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u46870-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/sportblend/index.html" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/sportblend/index.html" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u46862-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u46862-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u46862-4_0_content">Новинка в сфере активных развлечений — бампербол</p>
