--- a/alk-lp.html
+++ b/alk-lp.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u19158-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u19158-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/alk/index.html" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/alk/index.html" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u10948-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u10948-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u10948-4_0_content">Сайт — дипломная работа</p>
