--- a/skyeng-lp-copy.html
+++ b/skyeng-lp-copy.html
@@ -90,7 +90,7 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u54650-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u54650-5_content"><!-- content -->
-      <p><a class="nonblock" href="http://mlkhv.ru/st-intensive-lp/index.html" target="_blank">перейти на сайт</a></p>
+      <p><a class="nonblock" href="http://malakhov-tm.github.io/st-intensive-lp/index.html" target="_blank">перейти на сайт</a></p>
      </div>
      <div class="clearfix colelem shared_content" id="u54657-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u54657-4_content"><!-- content -->
       <p class="shared_content" data-content-guid="u54657-4_0_content">Лендинг — приглашение на онлайн интенсив</p>
